# coretrace-stack-analyzer

./: .clang-format  .ctrace-analyzer.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  13-stack-usage-analyzer-detect-parameters-that-can-be-const-pointerreference-const-correctness.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Dockerfile.release-binaries  INVALID_BASE_RECONSTRUCTION.md  NOTICE  PATCH.md  README.md  action.yml  archi_plan.md  build.sh  main.cpp  run_test.py  test_invalid_base.sh  Àtester.md
.github/workflows/: ci.yml  clang-format.yml  commit-check.yml  license-compliance.yml  publish-docker.yml  release-binaries.yml  test-ci-integration.yml
cmake/: CheckLLVMVersion.cmake
cmake/compiler/: coretrace-compiler.cmake
cmake/logger/: coretraceLog.cmake
docs/architecture/: analyzer-modules.md  pipeline-subscriber-classification.md  smt-implementation-plans.md  smt-solver-integration.md
docs/ci/: github-actions-consumer.yml  github-actions-docker-consumer.yml  github-actions-module-consumer.yml
docs/issues/: llvm-function-callsite-attributes-introspection.md  self-analysis-stabilization.md
extern-project/: CMakeLists.txt  README.md
extern-project/src/: main.cpp
fixtures/ci-consumer-project/: CMakeLists.txt
include/: StackUsageAnalyzer.hpp  helpers.hpp  mangle.hpp
include/analysis/: AllocaUsage.hpp  AnalyzerUtils.hpp  BufferWriteModel.hpp  CommandInjectionAnalysis.hpp  CompileCommands.hpp  ConstParamAnalysis.hpp  DuplicateIfCondition.hpp  DynamicAlloca.hpp  FrontendDiagnostics.hpp  FunctionFilter.hpp  GlobalReadBeforeWriteAnalysis.hpp  IRValueUtils.hpp  InputPipeline.hpp  IntRanges.hpp  IntegerOverflowAnalysis.hpp  InvalidBaseReconstruction.hpp  MemIntrinsicOverflow.hpp  NullDerefAnalysis.hpp  OOBReadAnalysis.hpp  ParameterDebugBinding.hpp  Reachability.hpp  ResourceLifetimeAnalysis.hpp  SizeMinusKWrites.hpp  StackBufferAnalysis.hpp  StackComputation.hpp  StackPointerEscape.hpp  TOCTOUAnalysis.hpp  TypeConfusionAnalysis.hpp  UninitializedVarAnalysis.hpp
include/analyzer/: AnalysisArtifactStore.hpp  AnalysisPipeline.hpp  DerivedModuleArtifacts.hpp  DiagnosticEmitter.hpp  HotspotProfiler.hpp  IRFactCollector.hpp  InstructionSubscriber.hpp  LocationResolver.hpp  ModulePreparationService.hpp  PerFunctionInstructionCache.hpp
include/app/: AnalyzerApp.hpp
include/cli/: ArgParser.hpp
include/passes/: ModulePasses.hpp
models/buffer-overflow/: generic.txt
models/resource-lifetime/: generic.txt
models/stack-escape/: generic.txt
scripts/: build.sh  check-license-compliance.sh  format-check.sh  format.sh  setup-dev.sh
scripts/bench/: pipeline_subscriber_ab.sh
scripts/ci/: commit_checker.py  run_code_analysis.py  semver_check.py
scripts/docker/: coretrace_entrypoint.py
scripts/git/: commit_msg_checker.py
src/: StackUsageAnalyzer.cpp  helpers.cpp  mangle.cpp
src/analysis/: AllocaUsage.cpp  AnalyzerUtils.cpp  BufferWriteModel.cpp  CommandInjectionAnalysis.cpp  CompileCommands.cpp  ConstParamAnalysis.cpp  DuplicateIfCondition.cpp  DynamicAlloca.cpp  FrontendDiagnostics.cpp  FunctionFilter.cpp  GlobalReadBeforeWriteAnalysis.cpp  IRValueUtils.cpp  InputPipeline.cpp  IntRanges.cpp  IntegerOverflowAnalysis.cpp  InvalidBaseReconstruction.cpp  MemIntrinsicOverflow.cpp  NullDerefAnalysis.cpp  OOBReadAnalysis.cpp  ParameterDebugBinding.cpp  Reachability.cpp  ResourceLifetimeAnalysis.cpp  SizeMinusKWrites.cpp  StackBufferAnalysis.cpp  StackComputation.cpp  StackPointerEscape.cpp  StackPointerEscapeInternal.hpp  StackPointerEscapeModel.cpp  StackPointerEscapeResolver.cpp  TOCTOUAnalysis.cpp  TypeConfusionAnalysis.cpp  UninitializedVarAnalysis.cpp
src/analyzer/: AnalysisPipeline.cpp  DiagnosticEmitter.cpp  HotspotProfiler.cpp  IRFactCollector.cpp  LocationResolver.cpp  ModulePreparationService.cpp  PerFunctionInstructionCache.cpp
src/app/: AnalyzerApp.cpp
src/cli/: ArgParser.cpp
src/passes/: ModulePasses.cpp
src/report/: ReportSerialization.cpp
test/: ct_stack_usage_bad_base.c  ct_stack_usage_bad_base.ll  ct_stack_usage_good_base.ll  test.cc  test.cpp  test.ll  test_container_of.c  test_container_of.ll  test_ptrtoint_pattern.c  test_ptrtoint_pattern.ll
test/alloca/: oversized-constant.c  recursive-controlled-alloca.c  recursive-infinite-alloca.c  user-controlled.c
test/bound-storage/: bound-storage-for-statement.c  bound-storage-if-statement.c  bound-storage.c  deep-alias.c  global-array-overflow.c  indirection-profonde-aliasing.c  ne-narrowing-unsound.c  ranges_test.c  struct_array_overflow.c  unreachable-detached.c  unreachable-multi-pred.c  unreachable-validation.c
test/coretrace-legacy/: AvoidDefaultArgumentsOnVirtualMethods.hh  DestructorOfVirtualClass.hh  EmptyForStatement.cc  RedundantIfStatement.c  RedundantIfStatement.cc  bad_function_pointer.cc  bound_index.cc  buffer_overflow.cc  dead_code.cc  double_free.c  format_problem.c  if_collapse.c  if_constant_expr.c  null_pointer.c  partitioning.cc  pointer_comparison_analysis.cc  pointer_overflow.cc  too_many_methods.cc  unaligned_dereferencing.cc
test/cpy-buffer/: bad-usage-memcpy.c  bad-usage-memset.c  ignore-non-mem-call.c  memcpy-name-false-positive.c  name-contains-memintrinsics.c  unbounded-strcpy-model.c
test/diagnostics/: combined-errors.c  duplicate-else-if-!.cpp  duplicate-else-if-basic.c  duplicate-else-if-bool-equals-false.cpp  duplicate-else-if-bool.c  duplicate-else-if-call.c  duplicate-else-if-commutative.c  duplicate-else-if-distinct.c  duplicate-else-if-enum-class.cpp  duplicate-else-if-enum.c  duplicate-else-if-enum.cpp  duplicate-else-if-namespace-class.cpp  duplicate-else-if-nested-loop.c  duplicate-else-if-nested-loop_2.c  duplicate-else-if-nested-loop_boolean_expr.c  duplicate-else-if-ptr.c  duplicate-else-if-separate.c  duplicate-else-if-short-circuit-distinct.c  duplicate-else-if-std_string.cpp  duplicate-else-if-threshold-vs-limit.cpp  duplicate-nested-if.c  duplicate-nested-if_2.c
test/docker/: Dockerfile
test/edge-cases/: extern-function-handling.c  function-pointer-calls.c  inline-function-interaction.c  (+3 more)
(+231 files in other folders)
